# PichiaSafeHarbor

./: .gitignore  HANDOFF.md  README.md  README.zh-CN.md  pyproject.toml
.claude/: launch.json
.streamlit/: config.toml
annotation_sources/: acquisition_evidence.v1.json  manifest.v1.json
app/: common.py  state.py  streamlit_app.py
docs/: ARCHITECTURE.md  EXECUTION_PLAN.md  EXECUTION_PLAN.pre-probe-draft-2026-07-15.md  REQUIREMENTS.md
reference/: README.md  manifest.v1.json
schemas/: acceptance_manifest.v1.schema.json  independent_transcript_source_acceptance.v1.schema.json  independent_transcript_source_manifest.v1.schema.json  prjna1210090_metadata_acceptance.v1.schema.json  prjna1210090_metadata_manifest.v1.schema.json  slice0a_acceptance_manifest.v1.schema.json  slice0b_acceptance_manifest.v1.schema.json  srr31989028_acquisition_evidence.v1.schema.json  srr31989028_probe_acceptance.v1.schema.json  srr31989028_probe_failure_acceptance.v1.schema.json  srr31989028_probe_failure_repeatability.v1.schema.json  srr31989028_probe_manifest.v1.schema.json
scripts/: accept_independent_source.py  accept_slice0b.py  accept_srr31989028_probe_failure.py  acquire_prjna1210090_metadata.py  build_srr31989028_probe_manifest.py  prepare_srr31989028_reads.py  record_srr31989028_download.py  run_independent_source_qualification.py  run_independent_source_workflow.py  run_prjna1210090_metadata.py  run_prjna1210090_workflow.py  run_slice0b_probe.py  run_srr31989028_controlled_probe.py  run_srr31989028_probe_workflow.py  run_test_evidence.py  start_PichiaSafeHarbor_lan_8511.ps1  (+11 more)
(+66 files in other folders)
